title fix
removed grow animation as it was making the mobile layout too wide

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,92 +136,6 @@ html, body {
   display: inline-block;
 }
 
-/* line 5, C:/Users/graeme robinson/Documents/GitHub/birthday_card/scss/modules/_components.scss */
-.title {
-  animation: growFrames ease-in 3s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  animation-fill-mode: forwards;
-  /*when the spec is finished*/
-  -webkit-animation: growFrames ease-in 3s;
-  -webkit-animation-iteration-count: 3s;
-  -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode: forwards;
-  /*Chrome 16+, Safari 4+*/
-  -moz-animation: growFrames ease-in 3s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode: forwards;
-  /*FF 5+*/
-  -o-animation: growFrames ease-in 3s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode: forwards;
-  /*Not implemented yet*/
-  -ms-animation: growFrames ease-in 3s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode: forwards;
-  /*IE 10+*/
-}
-
-@keyframes growFrames {
-  0% {
-    opacity: 0;
-    transform: translate(-27px, -26px) scaleX(1) scaleY(1);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0px, 0px) scaleX(2) scaleY(2);
-  }
-}
-
-@-moz-keyframes growFrames {
-  0% {
-    opacity: 0;
-    -moz-transform: translate(-27px, -26px) scaleX(1) scaleY(1);
-  }
-  100% {
-    opacity: 1;
-    -moz-transform: translate(0px, 0px) scaleX(2) scaleY(2);
-  }
-}
-
-@-webkit-keyframes growFrames {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate(-27px, -26px) scaleX(1) scaleY(1);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translate(0px, 0px) scaleX(2) scaleY(2);
-  }
-}
-
-@-o-keyframes growFrames {
-  0% {
-    opacity: 0;
-    -o-transform: translate(-27px, -26px) scaleX(1) scaleY(1);
-  }
-  100% {
-    opacity: 1;
-    -o-transform: translate(0px, 0px) scaleX(2) scaleY(2);
-  }
-}
-
-@-ms-keyframes growFrames {
-  /* line 73, C:/Users/graeme robinson/Documents/GitHub/birthday_card/scss/modules/_components.scss */
-  0% {
-    opacity: 0;
-    -ms-transform: translate(-27px, -26px) scaleX(1) scaleY(1);
-  }
-  /* line 77, C:/Users/graeme robinson/Documents/GitHub/birthday_card/scss/modules/_components.scss */
-  100% {
-    opacity: 1;
-    -ms-transform: translate(0px, 0px) scaleX(2) scaleY(2);
-  }
-}
-
 /* line 3, C:/Users/graeme robinson/Documents/GitHub/birthday_card/scss/animations/_mouse.scss */
 .scroll {
   -webkit-animation-name: scroll;
